added web client to

--- a/webclient/src/components/navbar/navbar.html
+++ b/webclient/src/components/navbar/navbar.html
@@ -1,14 +1,7 @@
-<nav class="navbar navbar-static-top navbar-inverse" ng-controller="NavbarCtrl">
-    <div class="navbar-header">
-        <a class="navbar-brand" href="#">
+<div class="container">
+    <div class="row">
+        <h1 class="text-center">
             Costa
-        </a>
+        </h1>
     </div>
-
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-6">
-        <ul class="nav navbar-nav">
-        </ul>
-
-
-    </div>
-</nav>
+</div>
