--- a/webclient/src/app/main/main.html
+++ b/webclient/src/app/main/main.html
@@ -1,1 +1,45 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
+<div class="container">
+    <form novalidate class="form-inline col-md-7 col-md-offset-2" name="form">
+        <legend>Add a Cost</legend>
+        <div class="form-group">
+            <div class="input-group">
+                <div class="input-group-addon">Amount</div>
+                <input type="number" ng-model="cost.amount" class="form-control col-md-12" placeholder="amount" required/></div>
+        </div>
+        <div class="form-group">
+            <div class="input-group">
+                <div class="input-group-addon">Description</div>
+                <input class="form-control" type="text" ng-model="cost.description" placeholder="Description" required/></div>
+        </div>
+        <button class="btn btn-default btn-primary" ng-click="create(cost)"
+                ng-disabled="form.$invalid || isUnchanged(user)">Add
+        </button>
+    </form>
+</div>
+<div class="container">
+
+    <div class="col-md-6 col-md-offset-2">
+        <h4>Your Costs</h4>
+        <table class="table table-striped table-bordered">
+            <thead>
+            <tr>
+                <th>#</th>
+                <th>Amount</th>
+                <th>Description</th>
+                <th>Date</th>
+            </tr>
+
+            </thead>
+            <tbody>
+
+            <tr ng-repeat="cost in costs">
+                <td>{{cost.id}}</td>
+                <td>{{cost.amount | currency : 'UGX '}}</td>
+                <td>{{cost.description}}</td>
+                <td>{{cost.created | date:'short'}}</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
